# nextjs-openai-webrtc

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  true  turbo.json
apps/rust-be/: Cargo.toml  true
apps/rust-be/src/: main.rs
apps/signal/: Cargo.toml
apps/signal/src/: lib.rs
src/app/: page.tsx
src/app/components/: Record.tsx  WebRtc.tsx
src/app/openaiRealtimeClient/: event_tests.ts  openaiRealtimeClient.ts  openai_events_logs.ts  realtimeEvents.ts
src/pages/api/: sessions.ts
