[package]
name = "rust-be"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = "3"
tokio = {version = "1.43.0" , features = ["full"]}
webrtc = "0.12.0"
chrono = "0.4.28"
log = "0.4"
env_logger = "0.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal = { path = "../signal" }
